[package]
name = "container-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.2.1", features = ["server", "transport-io"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7"
bollard = "0.18"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"

